--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -34,6 +34,7 @@
     <string name="menu_accounts">حساب هایی را که اجازه می دهید انتخاب کنید</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">تماس هایی را که احازه می دهید انتخاب کنید</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">%s مجوز به: </string>
