--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">Изберете сметки с позволение</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Изберете контакти с позволение</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Лицензирано на: %s</string>
