--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">Selecciona comptes a permetre</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Selecciona contactes a permetre</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">Nou</string>
     <string name="msg_update">Actualitza</string>
     <string name="msg_licensed" formatted="false">Llicenciat a: %s</string>
