--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">Choisir les comptes à autoriser</string>
     <string name="menu_applications">Choisir les applis à autoriser</string>
     <string name="menu_contacts">Choisir les contacts à autoriser</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">Nouv. :</string>
     <string name="msg_update">MàJ :</string>
     <string name="msg_licensed" formatted="false">Autorisé à : %s</string>
