--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">בחר חשבונות לאפשר</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">בחר אנשי קשר לאפשר</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">יישום מורשה ל: %s</string>
