--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">Válassza ki az engedélyezendő fiókokat</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Válassza ki az engedélyezendő névjegyeket</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Licensz tulajdonos: %s</string>
