--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">Selecione contas a autorizar</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Selecione contactos a autorizar</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
