--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">Select accounts to allow</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Licentiat pentru: %s</string>
