--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">İzin verilecek hesapları seç</string>
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">İzin verilecek kişileri seç</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">%s adına lisanslıdır.</string>
