--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_accounts">Chọn tài khoản cho phép</string>
     <string name="menu_applications">Chọn ứng dụng để cấp phép</string>
     <string name="menu_contacts">Chọn liên lạc cho phép</string>
+    <string name="menu_tutorial">Tutorial</string>
     <string name="msg_new">Mới</string>
     <string name="msg_update">Cập nhật</string>
     <string name="msg_licensed" formatted="false">Bản quyền: %s</string>
