--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -38,7 +38,7 @@
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
     <string name="msg_loading">Ładowanie</string>
     <string name="msg_applying">Stosowanie</string>
-    <string name="msg_applied">Template applied</string>
+    <string name="msg_applied">Zastosowano szablon</string>
     <string name="msg_saved_to" formatted="false">Zapisane do %s</string>
     <string name="msg_no_restrictions">Nie znaleziono ograniczeń</string>
     <string name="msg_sure">Czy jesteś pewny/a?</string>
@@ -118,8 +118,8 @@
     <string name="help_frozen">jest wyłączona</string>
     <string name="help_dangerous">niebezpieczne uprawnienie, ograniczenie może spowodować problemy</string>
     <string name="help_half">częściowo ograniczona</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
+    <string name="help_attention">ograniczenia wymagają sprawdzenia</string>
+    <string name="help_restricted">ograniczenia się zmieniły</string>
+    <string name="help_shared">ogrniczenia zostały wysłane</string>
 
 </resources>
