--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -133,8 +133,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="help_restricted">restrictions are changed</string>
     <string name="help_shared">restrictions are submitted</string>
     <string name="fingerprint" translatable="false">10620ae961d78854f6c9cd872c4388232849c799</string>
-    <string name="tutorial_mainheader" translatable="false">Select the category to restrict\n
-Choose visible apps with the filters</string>
+    <string name="tutorial_mainheader" translatable="false">Select the category to restrict; choose visible apps with the filters</string>
     <string name="tutorial_mainlist" translatable="false">Tap a check box to restrict the selected category for an application\n
 \nApplications will be fed empty or fake data for restricted categories\n
 \nTap the application icon for detailed restrictions and settings</string>
