--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -134,10 +134,10 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="help_shared">restrictions are submitted</string>
     <string name="fingerprint" translatable="false">10620ae961d78854f6c9cd872c4388232849c799</string>
     <string name="tutorial_mainheader" translatable="false">Select the category to restrict; choose visible apps with the filters</string>
-    <string name="tutorial_mainlist" translatable="false">Tap a check box to restrict the selected category for an application\n
-\nApplications will be fed empty or fake data for restricted categories\n
-\nTap the application icon for detailed restrictions and settings</string>
-    <string name="tutorial_detailsheader" translatable="false">Tap the application icon for more actions</string>
+    <string name="tutorial_mainlist" translatable="false">Tap a check box to restrict the selected category for an app\n
+\nApps will be fed empty or fake data for restricted categories\n
+\nTap the app icon for detailed restrictions and settings</string>
+    <string name="tutorial_detailsheader" translatable="false">Tap the app icon for more actions</string>
     <string name="tutorial_detailslist" translatable="false">Tap the down arrow to see the function exceptions of a restriction category</string>
 
 </resources>
