--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -120,5 +120,11 @@
     <string name="help_attention">restrictions need attention</string>
     <string name="help_restricted">restrictions are changed</string>
     <string name="help_shared">restrictions are submitted</string>
+    <string name="tutorial_mainheader">Select the category to restrict; choose visible apps with the filters</string>
+    <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
+\nApps will be fed empty or fake data for restricted categories\n
+\nTap the app icon for detailed restrictions and settings</string>
+    <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
+    <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
 
 </resources>
