--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -121,11 +121,11 @@
     <string name="help_attention">разрешения требуют внимания</string>
     <string name="help_restricted">разрешения изменены</string>
     <string name="help_shared">разрешения отправлены</string>
-    <string name="tutorial_mainheader">Select the category to restrict; choose visible apps with the filters</string>
-    <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
-\nApps will be fed empty or fake data for restricted categories\n
-\nTap the app icon for detailed restrictions and settings</string>
-    <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
-    <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="tutorial_mainheader">Выберите категорию для запрета; выберите видимые приложения с помощью фильтра</string>
+    <string name="tutorial_mainlist">Тапните по чекбоксу для запрета выбранной категории для приложения\n
+\nПриложения будут получать пустые или фальшивые данные для запрещенных категорий\n
+\nТапните по иконке приложения, чтобы увидеть подробные разрешения и настройки</string>
+    <string name="tutorial_detailsheader">Тапните по иконке приложения для дополнительных действий</string>
+    <string name="tutorial_detailslist">Тапните по стрелке, чтобы увидеть отдельные функции и их разрешения в категории</string>
 
 </resources>
