--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -27,7 +27,7 @@
     <string name="menu_apply">Pas sjabloon toe</string>
     <string name="menu_clear">Wissen</string>
     <string name="menu_app_launch">Uitvoeren</string>
-    <string name="menu_app_settings">Applicatiedetails</string>
+    <string name="menu_app_settings">Instellingen</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Sta accounts toe</string>
     <string name="menu_applications">Sta applicaties toe</string>
