--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -18,11 +18,11 @@
     <string name="menu_fetch">Stiahnuť obmedzenia</string>
     <string name="menu_pro">Pro verzia</string>
     <string name="menu_about">O aplikácii</string>
-    <string name="menu_help">Nápoveda</string>
+    <string name="menu_help">Pomocník</string>
     <string name="menu_all">Všetko</string>
     <string name="menu_restriction_all">Prepnúť obmedzenia</string>
-    <string name="menu_clear_all">Clear all</string>
-    <string name="menu_restrict_all">Restrict all</string>
+    <string name="menu_clear_all">Vyčistiť všetky</string>
+    <string name="menu_restrict_all">Obmedziť všetky</string>
     <string name="menu_usage_all">Prepnúť filter</string>
     <string name="menu_apply">Použiť šablónu</string>
     <string name="menu_clear">Vyčistiť</string>
@@ -30,25 +30,25 @@
     <string name="menu_app_settings">Nastavenia</string>
     <string name="menu_app_store">Obchod Play</string>
     <string name="menu_accounts">Povolené účty</string>
-    <string name="menu_applications">Vyberte povolené aplikácie</string>
+    <string name="menu_applications">Povolené aplikácie</string>
     <string name="menu_contacts">Povolené kontakty</string>
-    <string name="menu_tutorial">Tutorial</string>
+    <string name="menu_tutorial">Príručka</string>
     <string name="msg_new">Nové</string>
     <string name="msg_update">Aktualizácia</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
     <string name="msg_loading">Prebieha načítavanie</string>
-    <string name="msg_applying">Applying</string>
-    <string name="msg_applied">Template applied</string>
+    <string name="msg_applying">Aplikovanie</string>
+    <string name="msg_applied">Šablóny bola aplikovaná</string>
     <string name="msg_saved_to" formatted="false">Uložené do %s</string>
     <string name="msg_no_restrictions">Nenájdené žiadne obmedzenia</string>
-    <string name="msg_sure">Ste si istý?</string>
+    <string name="msg_sure">Ste si istí?</string>
     <string name="msg_done">Hotovo</string>
     <string name="msg_reboot">Vyžadovaný reštart zariadenia</string>
     <string name="msg_random_now">Náhodné hodnoty</string>
     <string name="msg_random_access">Náhodné hodnoty po prístupe</string>
     <string name="msg_random_boot">Náhodné hodnoty pri štarte zariadenia</string>
-    <string name="msg_usage">Updating usage data</string>
-    <string name="msg_restart">Application restart required</string>
+    <string name="msg_usage">Aktualizácia dát využitia</string>
+    <string name="msg_restart">Vyžadovaný reštart aplikácie</string>
     <string name="msg_first"><b>Veľká starostlivosť bola venovaná vývoju a testovaniu XPrivacy,
 avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zariadení a na každú aplikáciu.
 \n\nPoužitie je plne na vlastné riziko.</b>\n\nPozrite tiež licenciu:</string>
@@ -67,7 +67,7 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="restrict_messages">Správy (SMS, MMS)</string>
     <string name="restrict_network">Sieť (adresy)</string>
     <string name="restrict_notifications">Oznámenia</string>
-    <string name="restrict_overlay">Overlay</string>
+    <string name="restrict_overlay">Vrstva</string>
     <string name="restrict_phone">Telefón (ID, čísla, hovory)</string>
     <string name="restrict_sensors">Sensory</string>
     <string name="restrict_storage">Úložisko (médiá, SD karta)</string>
@@ -90,19 +90,19 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="title_frestricted">Filter na obmedzené</string>
     <string name="title_fuser">Filter na užívateľské aplikácie</string>
     <string name="title_fsystem">Filter na systémové aplikácie</string>
-    <string name="title_fnot">Obrátiť</string>
+    <string name="title_fnot">Obrátene</string>
     <string name="settings_serial">Sériové číslo</string>
     <string name="settings_lat">Zemepisná šírka</string>
     <string name="settings_lon">Zemepisná dĺžka</string>
-    <string name="settings_mac">MAC adresa</string>
-    <string name="settings_ip">IP adresa</string>
+    <string name="settings_mac">Adresa MAC</string>
+    <string name="settings_ip">Adresa IP</string>
     <string name="settings_phone">Telefónne číslo</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_adid">ID reklamy</string>
     <string name="settings_country">Krajina</string>
     <string name="settings_operator">Operátor</string>
     <string name="settings_subscriber">IMSI</string>
-    <string name="settings_ua">Identifikácia prehliadača</string>
+    <string name="settings_ua">Užívateľský agent</string>
     <string name="settings_general">Všeobecné</string>
     <string name="settings_fake_data">Falošné údaje</string>
     <string name="settings_global">Použiť globálne falošné údaje</string>
@@ -118,14 +118,14 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="help_frozen">je zakázaná</string>
     <string name="help_dangerous">je nebezpečná</string>
     <string name="help_half">čiastočne obmedzené</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
-    <string name="tutorial_mainheader">Select the category to restrict; choose visible apps with the filters</string>
-    <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
-\nApps will be fed empty or fake data for restricted categories\n
-\nTap the app icon for detailed restrictions and settings</string>
-    <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
-    <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="help_attention">obmedzenia vyžadujú pozornosť</string>
+    <string name="help_restricted">obmedzenia sú zmenené</string>
+    <string name="help_shared">obmedzenia sú odoslané</string>
+    <string name="tutorial_mainheader">Vyberte kategóriu na obmedzenie; vyberte viditeľné aplikácie pomocou filtrov</string>
+    <string name="tutorial_mainlist">Kliknite na zaškrtávacie pole ore obmedzenie vybranej kategórie pre aplikáciu\n
+\nAplikácie budú kŕmené prázdnymi alebo falošnými údaje pri obmedzených kategóriách\n
+\nKliknite na ikonu aplikácie pre podrobné obmedzenia a nastavenia</string>
+    <string name="tutorial_detailsheader">Kliknite na ikonu aplikácie pre viac akcií</string>
+    <string name="tutorial_detailslist">Kliknite na šípku nadol pre zobrazenie funkčných výnimiek pre kategóriu obmedzení</string>
 
 </resources>
