Setting to set maximum confidence fetch interval

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -110,6 +110,7 @@
     <string name="settings_log"> سِجِل تصحيح الأخطاء (يتطلب إعادة التشغيل) </string>
     <string name="settings_expert">وضع الخبراء</string>
     <string name="settings_dangerous">تقييد الوظائف الخطيرة</string>
+    <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
