--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -110,6 +110,7 @@
     <string name="settings_log">Debug-Log (erfordert Geräteneustart)</string>
     <string name="settings_expert">Experten-Modus</string>
     <string name="settings_dangerous">Beschränke "bedenkliche" Funktionen</string>
+    <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
