--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -112,6 +112,7 @@
     <string name="settings_log">لاگ ایرادیابی (نیازمند دوباره راه اندازی می باشد)</string>
     <string name="settings_expert">Expert mode</string>
     <string name="settings_dangerous">Restrict dangerous functions</string>
+    <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="help_application">برنامه های کاربردی</string>
     <string name="help_internet">مجوز استفاده از اینترنت را دارد</string>
     <string name="help_granted">مجوز اندروید را دارد</string>
