--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -109,6 +109,7 @@
     <string name="settings_log">Debuggaus logi (vaatii uudelleenkäynnistyksen)</string>
     <string name="settings_expert">Expert tila</string>
     <string name="settings_dangerous">Restrict dangerous functions</string>
+    <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="help_application">Applikaatio</string>
     <string name="help_internet">on internet käyttöoikeus</string>
     <string name="help_granted">on Android käyttöoikeus</string>
