--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -110,6 +110,7 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
     <string name="settings_log">Debug log (richiede riavvio)</string>
     <string name="settings_expert">Modalità esperto</string>
     <string name="settings_dangerous">Limita funzioni pericolose</string>
+    <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="help_application">Applicazione</string>
     <string name="help_internet">ha permesso internet</string>
     <string name="help_granted">ha permesso Android</string>
