--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -110,6 +110,7 @@
     <string name="settings_log">デバッグログ(再起動が必要)</string>
     <string name="settings_expert">エキスパートモード</string>
     <string name="settings_dangerous">危険な可能を制限する</string>
+    <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="help_application">アプリ</string>
     <string name="help_internet">はインターネット権限を持っています</string>
     <string name="help_granted">はアンドロイドの権限を持っています</string>
