--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -2,21 +2,21 @@
 
     <string name="app_notxposed" formatted="false">尚未安裝 Xposed framework 版本 %d+ </string>
     <string name="app_notenabled">尚未於 Xposed installer 啟用 XPrivacy</string>
-    <string name="app_wrongandroid">僅支援 Android 4.0+</string>
+    <string name="app_wrongandroid">僅支援版本 Android 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy 版本: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework 版本: %d</string>
     <string name="app_copyright">版權所有 \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">操作記錄</string>
     <string name="menu_refresh">重新整理</string>
     <string name="menu_settings">設定</string>
-    <string name="menu_template">預設規則</string>
+    <string name="menu_template">設定預設規則</string>
     <string name="menu_report">回報問題</string>
     <string name="menu_export">匯出規則</string>
     <string name="menu_import">匯入規則</string>
     <string name="menu_submit">上傳規則</string>
     <string name="menu_fetch">擷取規則</string>
     <string name="menu_theme">更換背景</string>
-    <string name="menu_pro">專業版</string>
+    <string name="menu_pro">升級專業版</string>
     <string name="menu_about">關於</string>
     <string name="menu_help">說明</string>
     <string name="menu_all">所有程式</string>
@@ -41,7 +41,7 @@
     <string name="msg_applied">已套用預設規則</string>
     <string name="msg_saved_to" formatted="false">已儲存至 %s</string>
     <string name="msg_no_restrictions">找不到限制規則</string>
-    <string name="msg_sure">確定進行操作?</string>
+    <string name="msg_sure">確定執行操作?</string>
     <string name="msg_done">完成</string>
     <string name="msg_reboot">需要重新啟動</string>
     <string name="msg_random_now">亂數</string>
@@ -51,23 +51,23 @@
     <string name="msg_restart">需要重新啓動程式</string>
     <string name="msg_first"><b>儘管 XPrivacy 在開發過程中經過詳細測試，但仍無法保證可以在所有裝置/安卓版本/各app上正常使用\n\n請自行承擔使用XPrivacy的可能風險。</b>\n\n請參閱說明文件：</string>
     <string name="restrict_accounts">帳戶 (Google, Facebook, etc)</string>
-    <string name="restrict_browser">瀏覽器 (書籤/記錄)</string>
+    <string name="restrict_browser">瀏覽器 (書籤, 記錄)</string>
     <string name="restrict_calendar">行事曆</string>
-    <string name="restrict_calling">通話功能 (撥號, 簡訊, MMS)</string>
+    <string name="restrict_calling">通話功能 (撥號, 傳送簡訊)</string>
     <string name="restrict_clipboard">剪貼簿</string>
     <string name="restrict_contacts">聯絡人</string>
     <string name="restrict_dictionary">使用者辭典</string>
     <string name="restrict_email">電子郵件</string>
-    <string name="restrict_identification">手機狀態識別碼</string>
+    <string name="restrict_identification">手機識別碼 (IMEI, .prop)</string>
     <string name="restrict_internet">網際網路</string>
     <string name="restrict_location">位置資訊 (精確/粗略)</string>
     <string name="restrict_media">媒體功能 (照相, 錄音, 錄影)</string>
-    <string name="restrict_messages">簡訊 (SMS, MMS)</string>
+    <string name="restrict_messages">簡訊內容 (SMS, MMS)</string>
     <string name="restrict_network">網路資訊 (IP, MAC, DHCP)</string>
     <string name="restrict_notifications">通知</string>
-    <string name="restrict_overlay">畫面混成(Overlay)</string>
-    <string name="restrict_phone">手機資訊 (ID, 號碼, 通話記錄)</string>
-    <string name="restrict_sensors">感應器</string>
+    <string name="restrict_overlay">畫面混成 (Overlay)</string>
+    <string name="restrict_phone">手機資訊 (SIM卡, 3G, 通話記錄)</string>
+    <string name="restrict_sensors">感應器 (陀螺儀, 指南針)</string>
     <string name="restrict_storage">儲存空間 (媒體檔案, SD卡)</string>
     <string name="restrict_shell">Shell (指令, ROOT指令)</string>
     <string name="restrict_system">已安裝軟體清單</string>
@@ -118,12 +118,12 @@
     <string name="help_half">只有限制部分權限</string>
     <string name="help_attention">限制時需特別注意</string>
     <string name="help_restricted">規則已變更</string>
-    <string name="help_shared">規則已送出</string>
-    <string name="tutorial_mainheader">[分類]：依APP調用之權限顯示。[篩選器]：依APP名稱或其他規則顯示。</string>
-    <string name="tutorial_mainlist">點選勾選框可封鎖APP使無法取得資訊\n
+    <string name="help_shared">規則已上傳</string>
+    <string name="tutorial_mainheader">[分類]：依照APP調用之權限顯示。[篩選器]：依APP名稱或其他規則顯示。</string>
+    <string name="tutorial_mainlist">點選勾選框可封鎖APP使無法取得敏感資訊或功能權限\n
      \n當特定資訊被封鎖時，該APP會接收到假資料或空白資料\n
      \n點選APP圖示可針對該APP做細部規則設定</string>
-    <string name="tutorial_detailsheader">點選APP圖示有進階動作選單</string>
-    <string name="tutorial_detailslist">點選 V 符號可編輯更細部的權限設定</string>
+    <string name="tutorial_detailsheader">點選APP圖示顯示進階動作選單</string>
+    <string name="tutorial_detailslist">點選﹀符號可編輯更細部的權限設定</string>
 
 </resources>
